--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "mukata-inventory-server",
+  "name": "mukata-inventory-client",
   "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "better-sqlite3": "^8.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2"
+    "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0"
   }
 }
